# Shadow

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ROADMAP_INTEGRATION.md  BALANCED_ENHANCEMENTS.md  CLAUDE.md  CLAUDE_CODE_QUICKSTART.md  COLOR_MIGRATION_GUIDE.md  DEFENSE_ACCEPTANCE_CRITERIA_SCORECARD.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_V2.md  EXECUTIVE_SUMMARY_READ_THIS_FIRST.md  FEATURE_GAP_ANALYSIS_FEB_2026.md  FINAL_PROJECT_REVIEW_AND_COMPLETION_ROADMAP.md  FIX_COMPLETE_STATUS.md  MASTER_ACTION_PLAN.md  MVP_CHECKLIST.md  PHASE2_WEEK1_COMPLETE.md  PHASE2_WEEK2_ENHANCEMENTS.md  PROGRESS.md  QUICK_START_GUIDE.md  README.md  ROADMAP.md  ROADMAP_TO_DEFENSE_JULY_2026.md  SETUP_GUIDE.md  SHADOW_SPECIFICATION_V2.md  SMARTSTUDY_COMPLETE.md  SMARTSTUDY_FINAL_ASSESSMENT.md  SMARTSTUDY_FRONTEND_TESTING.md  SMARTSTUDY_QUICKSTART.md  SMARTSTUDY_ROADMAP.md  SMARTSTUDY_TESTING_REPORT.md  SMARTSTUDY_TRIGGERS.md  SMARTSTUDY_V2_PROGRESS.md  TESTING_GUIDE.md  TESTING_TRIGGERS.md  VIDEO_EMBEDDING_FIX_COMPLETE.md  VISUAL_COMPARISON.md  YOUTUBE_INLINE_INTEGRATION_COMPLETE.md  check_servers.sh  (+7 more)
backend/: .bandit.yml  .dockerignore  .env.example  Dockerfile  Makefile  YOUTUBE_INTEGRATION_SUMMARY.md  add_converted_pdf_column.py  add_study_plan_columns.py  alembic.ini  convert_existing_pptx.py  create_content_curation_tables.py  create_notification_tables.py  create_quiz_tables.py  create_video_notes_table.py  entrypoint.sh  gitleaks.toml  init_smartstudy_db.py  migrate_study_plans.py  pyproject.toml  requirements.txt  reset_password.py  seed_courses.py  seed_shadow_realistic.py  test_mood_api.sh  test_mood_flow.py  test_sentiment.py  test_youtube_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 41d16dc059db_initial_schema.py  6211460164fa_add_auth_security_columns.py  a1b2c3d4e5f6_add_single_column_indexes.py  a3f8b2c91e04_add_slide_content_to_quizzes.py  b7c2d4e91f06_smartstudy_improvements.py  c4d5e6f7g8h9_add_scan_status_and_gin_indexes.py  c7f1a2b9d3e4_add_library_file_data_bytes.py  d8e9f0a1b2c3_add_password_reset_email_verification.py  e1f2a3b4c5d6_add_refresh_tokens_table.py  f1a2b3c4d5e6_add_performance_indexes.py
backend/app/: __init__.py  database.py  logging_config.py  main.py
backend/app/middleware/: logging_middleware.py  rate_limiter.py  security_headers.py
backend/app/models/: __init__.py  content_curation.py  course.py  library.py  mood.py  notification.py  quiz.py  refresh_token.py  smartstudy.py  task.py  usage_log.py  user.py
backend/app/routes/: __init__.py  admin.py  analytics.py  auth.py  cgpa.py  content_curation.py  courses.py  health.py  library.py  mood.py  notifications.py  recommendations.py  semesters.py  smartstudy.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  course.py  library.py  notification.py  smartstudy.py  task.py
backend/app/services/: ai_usage_tracker.py  article_search_service.py  audio_summary_service.py  cache_service.py  cgpa_export_service.py  content_curator.py  diagram_generator.py  document_converter.py  document_processor.py  email_service.py  emotion_analysis.py  feature_flags.py  library_service.py  (+13 more)
backend/scripts/: backup-db.sh  security_scan.sh
backend/tests/: conftest.py  test_e2e_flows.py  test_quiz.py  test_quiz_upload.py
(+217 files in other folders)
